crates/bingo-hooks-shell/src/snapshots/bingo_hooks_shell__events__tests__post_tool_use_shape.snap
---
source: crates/bingo-hooks-shell/src/events.rs
expression: "post_tool_use(fixture(&session, &cwd), &call(), &output)"
---
{
  "hook_event_name": "PostToolUse",
  "session_id": "ses_01",
  "cwd": "/work/project",
  "tool_name": "Bash",
  "tool_input": {
    "command": "ls -a"
  },
  "tool_use_id": "call_01",
  "tool_response": {
    "parts": [
      {
        "type": "text",
        "text": "a\nb\n"
      }
    ]
  }
}
