crates/bingo-hooks-shell/src/snapshots/bingo_hooks_shell__events__tests__pre_compact_shape.snap
---
source: crates/bingo-hooks-shell/src/events.rs
expression: "pre_compact(fixture(&session, &cwd))"
---
{
  "hook_event_name": "PreCompact",
  "session_id": "ses_01",
  "cwd": "/work/project",
  "trigger": "auto"
}
