crates/bingo-hooks-shell/src/snapshots/bingo_hooks_shell__events__tests__session_end_shape.snap
---
source: crates/bingo-hooks-shell/src/events.rs
expression: "session_end(fixture(&session, &cwd))"
---
{
  "hook_event_name": "SessionEnd",
  "session_id": "ses_01",
  "cwd": "/work/project",
  "end_reason": "other"
}
