crates/bingo-hooks-shell/src/snapshots/bingo_hooks_shell__events__tests__session_start_without_a_model_omits_it.snap
---
source: crates/bingo-hooks-shell/src/events.rs
expression: session_start(plain)
---
{
  "hook_event_name": "SessionStart",
  "session_id": "ses_01",
  "cwd": "/work/project",
  "source": "startup"
}
