crates/bingo-hooks-shell/src/snapshots/bingo_hooks_shell__events__tests__stop_shape.snap
---
source: crates/bingo-hooks-shell/src/events.rs
expression: "stop(fixture(&session, &cwd))"
---
{
  "hook_event_name": "Stop",
  "session_id": "ses_01",
  "cwd": "/work/project"
}
