crates/bingo-hooks-shell/src/snapshots/bingo_hooks_shell__events__tests__user_prompt_submit_shape.snap
---
source: crates/bingo-hooks-shell/src/events.rs
expression: "user_prompt_submit(fixture(&session, &cwd), \"write the tests\")"
---
{
  "hook_event_name": "UserPromptSubmit",
  "session_id": "ses_01",
  "cwd": "/work/project",
  "prompt": "write the tests"
}
